[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/WaitingRoom.gd" type="Script" id=1]
[ext_resource path="res://GUI/Color/Color_Picker.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/Time_select.tscn" type="PackedScene" id=3]

[node name="WaitingRoom" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Waiting Room"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 45.0

[node name="ItemList" type="ItemList" parent="VBoxContainer/CenterContainer"]
margin_left = 412.0
margin_top = 13.0
margin_right = 612.0
margin_bottom = 13.0
rect_min_size = Vector2( 200, 0 )
items = [ "Item 0", null, false ]
auto_height = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 49.0

[node name="StartButton" type="Button" parent="VBoxContainer/CenterContainer2" groups=["HostOnly"]]
visible = false
margin_left = 491.0
margin_top = -10.0
margin_right = 532.0
margin_bottom = 10.0
text = "Start"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 1024.0
margin_bottom = 57.0

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 1024.0
margin_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/CenterContainer3"]
margin_left = 232.0
margin_right = 791.0
margin_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer3/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 80.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CenterContainer3/HBoxContainer2/CenterContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
color = Color( 0.0117647, 0.0509804, 0.188235, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer3/HBoxContainer2/CenterContainer"]
margin_left = 2.0
margin_top = 11.0
margin_right = 78.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3/HBoxContainer2/CenterContainer/VBoxContainer"]
margin_right = 76.0
margin_bottom = 14.0
text = "Light"
align = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/CenterContainer3/HBoxContainer2/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 76.0
margin_bottom = 58.0

[node name="Time_box" parent="VBoxContainer/CenterContainer3/HBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 255.0
margin_bottom = 80.0

[node name="ColorRect" parent="VBoxContainer/CenterContainer3/HBoxContainer2/Time_box" index="0"]
margin_bottom = 80.0

[node name="CenterContainer" parent="VBoxContainer/CenterContainer3/HBoxContainer2/Time_box" index="1"]
margin_bottom = 80.0

[node name="GridContainer" parent="VBoxContainer/CenterContainer3/HBoxContainer2/Time_box/CenterContainer" index="0"]
margin_top = 19.0
margin_bottom = 61.0

[node name="Color_Picker" parent="VBoxContainer/CenterContainer3/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 259.0
margin_right = 559.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 0 )

[connection signal="pressed" from="VBoxContainer/CenterContainer2/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/HBoxContainer2/CenterContainer/VBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]

[editable path="VBoxContainer/CenterContainer3/HBoxContainer2/Time_box"]
